# lifeline

./: .gitignore  README.md
.github/workflows/: ci.yml
server/: README.md  pyproject.toml
server/data/scenarios/: grandson_jail.json
server/lifeline/: __init__.py  agent.py  app.py  classifier.py  gauge.py  llm.py  scenarios.py
server/tests/: test_agent.py  test_app.py  test_classifier.py  test_gauge.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  styles.css
web/src/components/: Gauge.jsx
web/src/lib/: useCall.js
